# jarvis-lms

./: .gitignore  README.md  example.yaml  main with memory.py  main with stt and wakeword.py  main with stt.py  main.py  pyproject.toml  react_prompt.py
memory/: memory.py  memory_utils.py
robots/: spider_bot.py
stt/: test_stt.py  wakeword.py
tools/: system_tools.py  tools.py  tools_list.py  weather.py
tts/: tts.py
