[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "afn>=0.1.2012.5.17.22.8",
    "chromadb>=1.0.20",
    "faster-whisper>=1.2.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "mem0ai==0.1.117",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "nvidia-ml-py>=13.580.65",
    "piper-tts==1.3.0",
    "psutil>=7.0.0",
    "pvporcupine>=3.0.5",
    "pydub>=0.25.1",
    "scapy>=2.6.1",
    "sentence-transformers>=5.1.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "vosk>=0.3.45",
]
